<resources>
    <string name="app_name">BusinessCardApp</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_cards">Cards</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="business_card_app">Business Card App</string>
    <string name="query_hint">Search contacts…</string>
    <string name="todo">TODO</string>
    <string name="btnDelete">Swipe delete button</string>
    <string name="btnCall">Swipe call button</string>
    <string name="user_mobile">+919096960779</string>
    <string name="user_email">rahul.wadhai2@gmail.com</string>
    <string name="user_company">Jejecomms Co.Ltd</string>
    <string name="user_note">Met at the 2025 tech conference. Follow up regarding the new project proposal.</string>
    <string name="des_phone_ic">Phone ic</string>
    <string name="des_email_ic">Email ic</string>
    <string name="des_company_ic">Company ic</string>
    <string name="des_note_ic">Note ic</string>
    <string name="copied_to_clipboard">copied to clipboard</string>
    <string name="no">No</string>
    <string name="to_copy">to copy</string>
    <string name="you_can_now_make_changes_to_the_text">You can now make changes to the text.</string>
    <string name="des_share_ic">Share ic</string>
    <string name="des_edit_ic">Edit ic</string>
    <string name="des_copy_email_ic">Copy email ic</string>
    <string name="des_copy_phone_ic">Copy phone ic</string>
</resources>